# HotSoup-backend

./: .env.dev  .gitignore  Dockerfile  HotSoup.py  README.md  api_module_calling_class.py  docker-compose.yaml  googleAPI.py  googleAPIclasses.py  google_api_class.py  google_api_module.py  pyproject.toml  requirements.txt
.github/workflows/: merge-dev.yam  merge-staging.yam
api_management/: google_api_class.py  google_api_module.py
app/: data.json  main.py  mongo_db_work.ipynb  sample_locations.json
app/api_management/: google_api_class.py
documentation/: dependencies.md  design.md  resources.md
tests/: test_main.py
