[tool.poetry]
name = "hotsoup-backend"
version = "0.1.0"
description = "HotSoup's Python API and Backend code base"
authors = ["Scott Snyder <ssnyder1111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.1.1"
uvicorn = "^0.18.2"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
