[tool.poetry]
name = "hotsoup-backend"
version = "0.1.0"
description = "HotSoup's Python API and Backend code base"
authors = ["Scott Snyder <ssnyder1111@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.78.0"
python = "^3.9"
pymongo = "^4.1.1"
pytest = "^7.1.2"
uvicorn = "^0.18.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
